--- a/Languages/default-sq.xml
+++ b/Languages/default-sq.xml
@@ -446,28 +446,6 @@
 			<button id="ID_CHAT_DISCONNECT" text="Shkëputu"/>
 		</toolbar>
 		<!-- WEBSERVICES -->
-		<toolbar name="WebServices.ShareMonkey">
-			<button id="ID_SHAREMONKEY_DOWNLOAD" text="Merr të Dhëna"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PREVIOUS" text="Kaluar"/>
-			<button id="ID_SHAREMONKEY_NEXT" text="Tjetër"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PRICES" text="Merr Çmime"/>
-			<button id="ID_SHAREMONKEY_COMPARE" text="Krahaso"/>
-			<button id="ID_SHAREMONKEY_BUY" text="Blije"/>
-		</toolbar>
-		<toolbar name="WebServices.ShareMonkey.WithSave">
-			<button id="ID_SHAREMONKEY_DOWNLOAD" text="Merr të Dhëna"/>
-			<button id="ID_SHAREMONKEY_SAVE" text="Ruaj"/>
-			<control id="ID_SHAREMONKEY_SAVE_OPTION" text="Ruaj Parashikimin" width="100" checked="true"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PREVIOUS" text="Kaluar"/>
-			<button id="ID_SHAREMONKEY_NEXT" text="Tjetër"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PRICES" text="Merr Çmime"/>
-			<button id="ID_SHAREMONKEY_COMPARE" text="Krahaso"/>
-			<button id="ID_SHAREMONKEY_BUY" text="Blije"/>
-		</toolbar>
 		<toolbar name="WebServices.MusicBrainz">
 			<button id="ID_MUSICBRAINZ_MATCHES" text="Shiko Dublimet e Albumit"/>
 			<button id="ID_MUSICBRAINZ_ALBUMS" text="Shiko Tërë Albumet"/>
@@ -1061,6 +1039,8 @@
 			<item id="ID_DOWNLOADS_COPY" text="Kopjo _URIn"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Ndihmë..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Meny b_azë"/>
 		</menu>
 		<menu name="CDownloadsWnd.Download">
 			<item id="ID_DOWNLOADS_LAUNCH_COPY" text="Parashik_o Skedën"/>
@@ -1087,9 +1067,12 @@
 				<item id="ID_DOWNLOADS_MOVE_DOWN" text="Lëvize _Poshtë"/>
 				<item id="ID_DOWNLOADS_BOOST" text="_Përbuze Kufirin e Gjerësisë së Bandës"/>
 			</menu>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Ndihmë..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Veti"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Meny b_azë"/>
 		</menu>
 		<menu name="CDownloadsWnd.Source">
 			<item id="ID_TRANSFERS_CONNECT" text="_Aksesi"/>
@@ -1107,6 +1090,8 @@
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Pastro"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_FILE_DELETE" text="_Fshije Skedën"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Meny b_azë"/>
 		</menu>
 		<menu name="CDownloadsWnd.Completed">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Hape ose Luaje"/>
@@ -1117,6 +1102,8 @@
 			<separator/>
 			<item id="ID_DOWNLOADS_FILE_DELETE" text="_Fshije Skedën"/>
 			<item id="ID_DOWNLOADS_RATE" text="_Vlerëso Skedën..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Meny b_azë"/>
 		</menu>
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Hape ose Luaje"/>
@@ -1259,6 +1246,7 @@
 			<menu text="Shërbime _Rrjeti">
 				<item id="ID_LIBRARY_BITZI_WEB" text="Shiko Biletën _Bitzi"/>
 				<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Shkarko Metadata"/>
+				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 			</menu>
 			<menu text="O_rganizo">
 				<item id="ID_LIBRARY_RENAME" text="_Riemërto Skedën"/>
@@ -1290,6 +1278,7 @@
 			<menu text="Shërbime _Rrjeti">
 				<item id="ID_LIBRARY_BITZI_WEB" text="Shiko Biletën _Bitzi"/>
 				<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Shkarko Metadata"/>
+				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 				<separator/>
 				<item id="ID_LIBRARY_CREATETORRENT" text="Krijo Skedë _.torrent"/>
 			</menu>
@@ -1665,9 +1654,9 @@
 			</menu>
 		</menu>
 		<menu name="WebServices.List.Menu">
-			<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Bitzi"/>
+			<item id="ID_LIBRARY_BITZI_WEB" text="Shiko Biletën _Bitzi"/>
+			<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Shkarko Metadata"/>
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
-			<item id="ID_WEBSERVICES_SHAREMONKEY" text="_ShareMonkey"/>
 		</menu>
 	</menus>
 	<!-- Documents -->
@@ -3373,7 +3362,6 @@
 		<string id="20011" value="&amp;Tjetër"/>
 		<string id="20012" value="Përfundo"/>
 		<string id="20013" value="Gjithçka"/>
-		<string id="20014" value="This option uses services provided by Bitzi.com for recognising and sharing information about selected files.\n\nShareaza will transmit the SHA1 hash code for the selected file(s) in order to query the Bitzi database. If you are concerned about privacy, you may wish to consult the Bitzi.com privacy policy.\n\nWould you like to proceed?"/>
 		<string id="20100" value="Connecting"/>
 		<string id="20101" value="Kërkesë"/>
 		<string id="20102" value="Përgjigje"/>
