--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -446,28 +446,6 @@
 			<button id="ID_CHAT_DISCONNECT" text="Disconnetti"/>
 		</toolbar>
 		<!-- WEBSERVICES -->
-		<toolbar name="WebServices.ShareMonkey">
-			<button id="ID_SHAREMONKEY_DOWNLOAD" text="Ottieni Dati"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PREVIOUS" text="Precedente"/>
-			<button id="ID_SHAREMONKEY_NEXT" text="Successiva"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PRICES" text="Ottieni Prezzi"/>
-			<button id="ID_SHAREMONKEY_COMPARE" text="Confronta"/>
-			<button id="ID_SHAREMONKEY_BUY" text="Compralo"/>
-		</toolbar>
-		<toolbar name="WebServices.ShareMonkey.WithSave">
-			<button id="ID_SHAREMONKEY_DOWNLOAD" text="Ottieni Dati"/>
-			<button id="ID_SHAREMONKEY_SAVE" text="Salva"/>
-			<control id="ID_SHAREMONKEY_SAVE_OPTION" text="Salva Anteprima" width="100" checked="true"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PREVIOUS" text="Precedente"/>
-			<button id="ID_SHAREMONKEY_NEXT" text="Successiva"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PRICES" text="Ottieni Prezzi"/>
-			<button id="ID_SHAREMONKEY_COMPARE" text="Confronta"/>
-			<button id="ID_SHAREMONKEY_BUY" text="Compralo"/>
-		</toolbar>
 		<toolbar name="WebServices.MusicBrainz">
 			<button id="ID_MUSICBRAINZ_MATCHES" text="Vedi Corrispondenze Album"/>
 			<button id="ID_MUSICBRAINZ_ALBUMS" text="Vedi Tutti Gli Album"/>
@@ -1061,6 +1039,8 @@
 			<item id="ID_DOWNLOADS_COPY" text="Copia _URI"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="Aiuto..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Menu s_hell"/>
 		</menu>
 		<menu name="CDownloadsWnd.Download">
 			<item id="ID_DOWNLOADS_LAUNCH_COPY" text="Anteprima"/>
@@ -1087,9 +1067,12 @@
 				<item id="ID_DOWNLOADS_MOVE_DOWN" text="Sposta giù"/>
 				<item id="ID_DOWNLOADS_BOOST" text="Ignora limite di banda"/>
 			</menu>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="Aiuto..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Proprietà"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Menu s_hell"/>
 		</menu>
 		<menu name="CDownloadsWnd.Source">
 			<item id="ID_TRANSFERS_CONNECT" text="_Accedi"/>
@@ -1107,6 +1090,8 @@
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="Rimuovi"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_FILE_DELETE" text="Elimina file"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Menu s_hell"/>
 		</menu>
 		<menu name="CDownloadsWnd.Completed">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="Apri/Play"/>
@@ -1117,6 +1102,8 @@
 			<separator/>
 			<item id="ID_DOWNLOADS_FILE_DELETE" text="Elimina file"/>
 			<item id="ID_DOWNLOADS_RATE" text="_Valuta file..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Menu s_hell"/>
 		</menu>
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="Apri/Play"/>
@@ -1259,6 +1246,7 @@
 			<menu text="Servizi web">
 				<item id="ID_LIBRARY_BITZI_WEB" text="Visualizza la ricerca su Bitzi"/>
 				<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Scarica metadata"/>
+				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 			</menu>
 			<menu text="_Organizza">
 				<item id="ID_LIBRARY_RENAME" text="_Rinomina file"/>
@@ -1290,6 +1278,7 @@
 			<menu text="Servizi web">
 				<item id="ID_LIBRARY_BITZI_WEB" text="Visualizza la ricerca su Bitzi"/>
 				<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Scarica metadata"/>
+				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 				<separator/>
 				<item id="ID_LIBRARY_CREATETORRENT" text="Crea file ._torrent"/>
 			</menu>
@@ -1665,9 +1654,9 @@
 			</menu>
 		</menu>
 		<menu name="WebServices.List.Menu">
-			<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Bitzi"/>
+			<item id="ID_LIBRARY_BITZI_WEB" text="Visualizza la ricerca su Bitzi"/>
+			<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Scarica metadata"/>
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
-			<item id="ID_WEBSERVICES_SHAREMONKEY" text="_ShareMonkey"/>
 		</menu>
 	</menus>
 	<!-- Documents -->
@@ -3372,7 +3361,6 @@
 		<string id="20011" value="&amp;Avanti"/>
 		<string id="20012" value="Fine"/>
 		<string id="20013" value="Tutti"/>
-		<string id="20014" value="Questa opzione utilizza i servizi di Bitzi.com per il riconoscimento e la condivisione delle informazioni sui file selezionati.\n\nShareaza trasmetterà il codice hash SHA1 per i file selezionati per poter effettuare richieste al database di Bitzi. Se non conosci le condizioni sulla privacy, consultale su Bitzi.com .\n\nDesideri continuare?"/>
 		<string id="20100" value="Connessione"/>
 		<string id="20101" value="Richiesta"/>
 		<string id="20102" value="Risposta"/>
