--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -446,28 +446,6 @@
 			<button id="ID_CHAT_DISCONNECT" text="Verbreek Verbinding"/>
 		</toolbar>
 		<!-- WEBSERVICES -->
-		<toolbar name="WebServices.ShareMonkey">
-			<button id="ID_SHAREMONKEY_DOWNLOAD" text="Verkrijg Data"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PREVIOUS" text="Vorige"/>
-			<button id="ID_SHAREMONKEY_NEXT" text="Volgende"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PRICES" text="Verkrijg Prijzen"/>
-			<button id="ID_SHAREMONKEY_COMPARE" text="Vergelijken"/>
-			<button id="ID_SHAREMONKEY_BUY" text="Buy It"/>
-		</toolbar>
-		<toolbar name="WebServices.ShareMonkey.WithSave">
-			<button id="ID_SHAREMONKEY_DOWNLOAD" text="Verkrijg Data"/>
-			<button id="ID_SHAREMONKEY_SAVE" text="Opslaan"/>
-			<control id="ID_SHAREMONKEY_SAVE_OPTION" text="Voorvertoning Opslaan" width="100" checked="true"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PREVIOUS" text="Vorige"/>
-			<button id="ID_SHAREMONKEY_NEXT" text="Volgende"/>
-			<separator/>
-			<button id="ID_SHAREMONKEY_PRICES" text="Verkrijg Prijzen"/>
-			<button id="ID_SHAREMONKEY_COMPARE" text="Vergelijken"/>
-			<button id="ID_SHAREMONKEY_BUY" text="Buy It"/>
-		</toolbar>
 		<toolbar name="WebServices.MusicBrainz">
 			<button id="ID_MUSICBRAINZ_MATCHES" text="Toon Album Resultaten"/>
 			<button id="ID_MUSICBRAINZ_ALBUMS" text="Toon Alle Albums"/>
@@ -1061,6 +1039,8 @@
 			<item id="ID_DOWNLOADS_COPY" text="_URI kopiëren"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Help..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Conte_xtmenu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Download">
 			<item id="ID_DOWNLOADS_LAUNCH_COPY" text="Voorvertone_n Bestand"/>
@@ -1087,9 +1067,12 @@
 				<item id="ID_DOWNLOADS_MOVE_DOWN" text="Naar b_eneden"/>
 				<item id="ID_DOWNLOADS_BOOST" text="_Negeer snelheidslimiet"/>
 			</menu>
+			<separator/>
 			<item id="ID_DOWNLOADS_HELP" text="_Help..."/>
 			<separator/>
 			<item id="ID_DOWNLOADS_EDIT" text="_Geadvanceerde Eigenschappen"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Conte_xtmenu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Source">
 			<item id="ID_TRANSFERS_CONNECT" text="_Starten"/>
@@ -1107,6 +1090,8 @@
 			<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Wissen"/>
 			<separator/>
 			<item id="ID_DOWNLOADS_FILE_DELETE" text="Bestand _verwijderen"/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Conte_xtmenu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Completed">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Openen of afspelen"/>
@@ -1117,6 +1102,8 @@
 			<separator/>
 			<item id="ID_DOWNLOADS_FILE_DELETE" text="Bestand _verwijderen"/>
 			<item id="ID_DOWNLOADS_RATE" text="Bestand _beoordelen..."/>
+			<separator/>
+			<item id="ID_SHELL_MENU" text="Conte_xtmenu"/>
 		</menu>
 		<menu name="CDownloadsWnd.Seeding">
 			<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Openen of afspelen"/>
@@ -1259,6 +1246,7 @@
 			<menu text="_Internetdiensten">
 				<item id="ID_LIBRARY_BITZI_WEB" text="_Bitzi Ticket bekijken"/>
 				<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="Metadata _downloaden"/>
+				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 			</menu>
 			<menu text="_Organiseren">
 				<item id="ID_LIBRARY_RENAME" text="Bestand _hernoemen"/>
@@ -1290,6 +1278,7 @@
 			<menu text="_Internetdiensten">
 				<item id="ID_LIBRARY_BITZI_WEB" text="_Bitzi Ticket bekijken"/>
 				<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="Metadata _downloaden"/>
+				<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
 				<separator/>
 				<item id="ID_LIBRARY_CREATETORRENT" text="._Torrent maken"/>
 			</menu>
@@ -1665,9 +1654,9 @@
 			</menu>
 		</menu>
 		<menu name="WebServices.List.Menu">
-			<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Bitzi"/>
+			<item id="ID_LIBRARY_BITZI_WEB" text="_Bitzi Ticket bekijken"/>
+			<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="Metadata _downloaden"/>
 			<item id="ID_WEBSERVICES_MUSICBRAINZ" text="_MusicBrainz"/>
-			<item id="ID_WEBSERVICES_SHAREMONKEY" text="_ShareMonkey"/>
 		</menu>
 	</menus>
 	<!-- Documents -->
@@ -3372,7 +3361,6 @@
 		<string id="20011" value="&amp;Volgende"/>
 		<string id="20012" value="Beëindig"/>
 		<string id="20013" value="Alles"/>
-		<string id="20014" value="Deze optie gebruikt diensten die zijn verstrekt door Bitzi.com voor het herkennen en delen van informatie over de geselecteerde bestanden.\n\nShareaza geeft de SHA1 hash-code door voor de geselecteerde bestand(en) om de Bitzi gegevensbank op te vragen. Als je je zorgen maakt over privacy, kun je de privacypolis van Bitzi.com raadplegen.\n\nWil je verdergaan?"/>
 		<string id="20100" value="Verbinden"/>
 		<string id="20101" value="Toelating vragen..."/>
 		<string id="20102" value="Antwoordt..."/>
